<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BasesDeDatos</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    
    <string name="hint_name">Ingrese nombre</string>
    <string name="hint_drink">Ingrese bebida favorita</string>
    <string name="hint_sport">Ingrese deporte favorito</string>
    <string name="save">Guardar</string>
    <string name="query">Consultar</string>
    <string name="clear">Limpiar</string>

</resources>
